<?xml version="1.0"?>
<package>
  <name>freewalk</name>
  <version>0.0.0</version>
  <description>Wrapper around tracking and stimulus delivery for Kristina's free walking behavior experiments.</description>

  <maintainer email="toconnel@caltech.edu">Tom O'Connell</maintainer>
  <author email="toconnel@caltech.edu">Tom O'Connell</author>
  <license>GPLv3</license>
  <url>https://github.com/tom-f-oconnell/freewalk</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>multi_tracker</build_depend>
  <build_depend>stimuli</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>multi_tracker</run_depend>
  <run_depend>stimuli</run_depend>
  <run_depend>metatools</run_depend>
</package>
